--- a/templates/diagnosis/edit.diagnosis-translation.html
+++ b/templates/diagnosis/edit.diagnosis-translation.html
@@ -75,13 +75,13 @@
 					<div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
 						<div class="input-group">
 							<span class="input-group-addon">EN</span>
-							<input class="form-control" type="text" ng-model="diagnosisTranslation.name_EN" ng-change="setChangesMade()" placeholder="English Title" required="required">
+							<input class="form-control" type="text" ng-model="diagnosisTranslation.name_EN" ng-change="detailsUpdated()" placeholder="English Title" required="required">
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
 						<div class="input-group">
 							<span class="input-group-addon">FR</span>
-							<input class="form-control" type="text" ng-model="diagnosisTranslation.name_FR" ng-change="setChangesMade()" placeholder="Titre Français" required="required">
+							<input class="form-control" type="text" ng-model="diagnosisTranslation.name_FR" ng-change="detailsUpdated()" placeholder="Titre Français" required="required">
 						</div>
 					</div>
 				</div>
@@ -100,7 +100,7 @@
             <span style="font-size:20px;">HTML (English)</span>
           </div>
 						<div class="input-group">
-							<div text-angular ng-model="diagnosisTranslation.description_EN" ng-change="setChangesMade()" placeholder="English Description" required="required" ta-toolbar="toolbar"></div>
+							<div text-angular ng-model="diagnosisTranslation.description_EN" ng-change="detailsUpdated()" placeholder="English Description" required="required" ta-toolbar="toolbar"></div>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-6">
@@ -108,7 +108,7 @@
             <span style="font-size:20px;">HTML (Français)</span>
           </div>
 						<div class="input-group">
-							<div text-angular ng-model="diagnosisTranslation.description_FR" ng-change="setChangesMade()" placeholder="Description Français" required="required" ta-toolbar="toolbar"></div>
+							<div text-angular ng-model="diagnosisTranslation.description_FR" ng-change="detailsUpdated()" placeholder="Description Français" required="required" ta-toolbar="toolbar"></div>
 						</div>
 					</div>
 				</div>
