--- a/templates/legacy-questionnaire/edit.legacy-questionnaire.html
+++ b/templates/legacy-questionnaire/edit.legacy-questionnaire.html
@@ -30,13 +30,13 @@
 				<div class="col-xs-12 col-sm-6">
 					<div class="input-group">
 						<span class="input-group-addon">EN</span>
-						<textarea class="form-control" rows="1" ng-model="legacyQuestionnaire.name_EN" placeholder="English Title" ng-change="setChangesMade()"></textarea>
+						<textarea class="form-control" rows="1" ng-model="legacyQuestionnaire.name_EN" placeholder="English Title" ng-change="detailsUpdated()"></textarea>
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6">
 					<div class="input-group">
 						<span class="input-group-addon">FR</span>
-						<textarea class="form-control" rows="1" ng-model="legacyQuestionnaire.name_FR" placeholder="Titre Français" ng-change="setChangesMade()"></textarea>
+						<textarea class="form-control" rows="1" ng-model="legacyQuestionnaire.name_FR" placeholder="Titre Français" ng-change="detailsUpdated()"></textarea>
 					</div>
 				</div>
 			</div>
@@ -55,7 +55,7 @@
             <span style="font-size:20px;">HTML (English)</span>
           </div>
           <div class="form-group">
-            <div text-angular ng-model="legacyQuestionnaire.intro_EN" ng-change="setChangesMade()"></div>
+            <div text-angular ng-model="legacyQuestionnaire.intro_EN" ng-change="detailsUpdated()"></div>
           </div>
         </div>
         <div class="col-xs-12 col-lg-4">
@@ -76,7 +76,7 @@
             <span style="font-size:20px;">HTML (Français) </span>
           </div>
           <div class="form-group">
-            <div text-angular ng-model="legacyQuestionnaire.intro_FR" ng-change="setChangesMade()"></div>
+            <div text-angular ng-model="legacyQuestionnaire.intro_FR" ng-change="detailsUpdated()"></div>
           </div>
         </div>
         <div class="col-xs-12 col-lg-4">
@@ -365,13 +365,13 @@
             <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
               <div class="input-group">
                 <span class="input-group-addon">MIN</span>
-                <input class="form-control" ng-model="demoFilter.age.min" ng-change="setChangesMade()" type="number" ng-max="demoFilter.age.max" min="0">
+                <input class="form-control" ng-model="demoFilter.age.min" ng-change="ageUpdate()" type="number" ng-max="demoFilter.age.max" min="0">
               </div> 
             </div>
             <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
               <div class="input-group">
                 <span class="input-group-addon">MAX</span>
-                <input class="form-control" ng-model="demoFilter.age.max" ng-change="setChangesMade()" type="number" max="100" ng-min="demoFilter.age.min">
+                <input class="form-control" ng-model="demoFilter.age.max" ng-change="ageUpdate()" type="number" max="100" ng-min="demoFilter.age.min">
               </div> 
             </div>
           </div>
