--- a/templates/alias/edit.alias.html
+++ b/templates/alias/edit.alias.html
@@ -120,9 +120,27 @@
       <div class="alert alert-info" role="alert">
         <strong>Current Educational Material (EN / FR)</strong><br>
         <p>
-          <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-          <span ng-if="alias.eduMat">{{alias.eduMat.name_EN}} / {{alias.eduMat.name_FR}}</span>
-          <span ng-if="!alias.eduMat">None</span>
+          <div>
+            <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
+            <span ng-if="alias.eduMat">
+              <span ng-if="alias.eduMat.tocs.length">
+                <span style="cursor:pointer" ng-click="toggleTOCDisplay()">
+                  <strong>{{alias.eduMat.name_EN}} / {{alias.eduMat.name_FR}}</strong>
+                </span>
+                <ul ng-if="showTOCs">
+                  <li ng-repeat="toc in alias.eduMat.tocs">
+                    <strong><a target="_blank" href="{{toc.url_EN}}">{{toc.name_EN}}</a></strong> / <strong><a target="_blank" href="{{toc.url_FR}}">{{toc.name_FR}}</a></strong>
+                  </li>
+                </ul>
+              </span>
+              <span ng-if="!alias.eduMat.tocs.length">
+                <span>
+                  <strong><a target="_blank" href="{{alias.eduMat.url_EN}}">{{alias.eduMat.name_EN}}</a> / <a target="_blank" href="{{alias.eduMat.url_FR}}">{{alias.eduMat.name_FR}}</a></strong>
+                </span>
+              </span>
+            </span>
+            <span ng-if="!alias.eduMat">None</span>
+          </div>
         </p>
       </div>
       <div class="list-space">
@@ -133,7 +151,7 @@
         <ul class="list-items">
           <li ng-repeat="eduMat in eduMatList | filter: searchEduMatsFilter">
             <label>
-              <input type="radio" ng-model="alias.eduMatSer" ng-change="eduMatUpdate(eduMat)" ng-checked="alias.eduMatSer == eduMat.serial" ng-value="eduMat.serial" /> {{eduMat.name_EN}}
+              <input type="radio" ng-model="alias.eduMatSer" ng-click="eduMatUpdate($event,eduMat)" value="{{eduMat.serial}}" /> {{eduMat.name_EN}}
             </label>
           </li>
         </ul>
