--- Added description to alias expressions         -- Fix to get resource description from MediVisit appointments         -- requires data refactoring

--- a/templates/alias/add.alias.html
+++ b/templates/alias/add.alias.html
@@ -107,7 +107,7 @@
                     <p>
                       <ul style="max-height: 100px; overflow-y: auto;">
                         <li ng-repeat="term in termList | filter: {added: 1}">
-                          {{term.id}}
+                          {{term.name}}
                         </li>
                       </ul>
                     </p>
